--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,16 @@
 			<scope>test</scope> <!-- solo se usa para Test, cuando se crea el proyecto no se usa esta libreria, esto dice que no se implemente en produccion -->
 		</dependency>
 
-
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.1.0.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.2.4.Final</version>
+		</dependency>
 
 	</dependencies>
 
